--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
-body {
+html {
+  box-sizing: border-box;
   background-color: #fdf6e3;
 }
 
-header,footer {
+header, footer {
   font-size: 1.5rem;
 }
 
@@ -18,6 +19,37 @@ nav ul {
   background-color: #eee8d5;
 }
 
-.contents,.favs,.facts,.types {
+.contents, .favs, .facts, .types {
   color: #93a1a1;
+}
+
+.wrapper :nth-child(1) {
+  background-color: #b58900;
+}
+
+dfn + strong {
+  color: #fff;
+}
+
+a {
+  background-color: #719e07;
+}
+
+ol:first-child {
+  color: #719e47;
+}
+
+ol:last-child {
+  color: #2aa198;
+}
+
+li:nth-child(odd) {
+  background-color: #657ba3;
+}
+
+li:nth-child(even) {
+  background-color: #586e75;
+}
+li:nth-child(3) {
+  background-color: #d04b16;
 }
