--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ header, footer {
   font-size: 1.5rem;
 }
 
-nav ul {
+nav > ul {
   font-family: sans-serif;
 }
 
@@ -19,11 +19,11 @@ nav ul {
   background-color: #eee8d5;
 }
 
-.contents, .favs, .facts, .types {
+#contents, #favs, #facts, #types {
   color: #93a1a1;
 }
 
-.wrapper :nth-child(1) {
+.wrapper > .dfn {
   background-color: #b58900;
 }
 
@@ -31,12 +31,11 @@ dfn + strong {
   color: #fff;
 }
 
-a {
+a:not(.no-highlight) {
   background-color: #719e07;
 }
 
-*, *::after, * {
-  box-sizing: content-box;
+ul li:target {
   background-color: #2694d8;
 }
 
@@ -48,14 +47,14 @@ ol:last-child {
   color: #2aa198;
 }
 
-li:nth-child(odd) {
+.types > li:nth-child(odd) {
   background-color: #657ba3;
 }
 
-li:nth-child(even) {
+.types > li:nth-child(even) {
   background-color: #586e75;
 }
 
-li:nth-child(3) {
+.types > li:nth-child(3) {
   background-color: #d04b16;
 }
