--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,10 @@ ol:last-child {
   background-color: #586e75;
 }
 
-.types > li:nth-child(3) {
+.types > li:nth-child(3n) {
   background-color: #d04b16;
+}
+
+* {
+  box-sizing: inherit;
 }
